--- a/client/switch.css
+++ b/client/switch.css
@@ -1,5 +1,5 @@
 .onoffswitch {
-    position: relative; width: 86px;
+    position: relative; width: 142px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
 .onoffswitch-checkbox {
@@ -7,34 +7,34 @@
 }
 .onoffswitch-label {
     display: block; overflow: hidden; cursor: pointer;
-    border: 2px solid #999999; border-radius: 50px;
+    border: 2px solid #FFFFFF; border-radius: 50px;
 }
 .onoffswitch-inner {
     display: block; width: 200%; margin-left: -100%;
     transition: margin 0.3s ease-in 0s;
 }
 .onoffswitch-inner:before, .onoffswitch-inner:after {
-    display: block; float: left; width: 50%; height: 24px; padding: 0; line-height: 24px;
-    font-size: 18px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    display: block; float: left; width: 50%; height: 41px; padding: 0; line-height: 41px;
+    font-size: 25px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
     box-sizing: border-box;
 }
 .onoffswitch-inner:before {
-    content: "ON";
-    padding-left: 12px;
-    background-color: #34A7C1; color: #FFFFFF;
+    content: "\00a0 \00a0 \00a0 \00a0 UP";
+    padding-left: 14px;
+    background-color: #373A36; color: #FFFFFF;
 }
 .onoffswitch-inner:after {
-    content: "OFF";
-    padding-right: 12px;
-    background-color: #EEEEEE; color: #999999;
+    content: "DOWN";
+    padding-right: 14px;
+    background-color: #373A36; color: #FFFFFF;
     text-align: right;
 }
 .onoffswitch-switch {
-    display: block; width: 31px; margin: -3.5px;
-    background: #FFFFFF;
+    display: block; width: 38px; margin: 1.5px;
+    background: #D0021B;
     position: absolute; top: 0; bottom: 0;
-    right: 58px;
-    border: 2px solid #999999; border-radius: 50px;
+    right: 97px;
+    border: 2px solid #FFFFFF; border-radius: 50px;
     transition: all 0.3s ease-in 0s;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
@@ -42,4 +42,5 @@
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px;
+    background-color: #00B050;
 }
